# spandsp

./: AUTHORS  ChangeLog  DueDiligence  Makefile.am  Makefile.in  README  config-h.in  configure  configure.ac  configure.in  libspandsp.vcproj  spandsp.pc  spandsp.spec  spandsp.spec.in  unpack_g722_data.sh  unpack_g726_data.sh  unpack_gsm0610_data.sh  unpack_v56ter_data.sh  wrapper.xsl
config/: ax_c99_features.m4  ax_check_real_file.m4  ax_fixed_point_machine.m4  ax_misaligned_access_fails.m4
contrib/: mandriva.spec
debian/: changelog  control  libspandsp3.install  libspandsp5.install
doc/: Makefile.am  Makefile.in  doxygen.in  libspandsp-doxygen
etsitests/: Makefile.am  Makefile.in
itutests/: Makefile.am  Makefile.in
itutests/fax/: Makefile.am  Makefile.in  generate_dithered_tif.c  generate_sized_pages.c
localtests/: Makefile.am  Makefile.in
spandsp/: fax-tests.xml  tsb85.xml
spandsp-sim/: Makefile.am  Makefile.in  g1050.c  libspandsp_sim.2008.vcproj  line_model.c  line_models.c  make_line_models.c  rfc2198_sim.c  spandsp-sim.h  test_utils.c
spandsp-sim/msvc/: vc9proj.head
spandsp-sim/spandsp/: g1050.h  line_model.h  line_models.h  rfc2198_sim.h  test_utils.h
src/: Makefile.am  Makefile.in  adsi.c  async.c  at_dictionary_gen.c  at_interpreter.c  awgn.c  bell_r2_mf.c  bert.c  bit_operations.c  bitstream.c  complex_dds.c  complex_filters.c  complex_vector_float.c  complex_vector_int.c  crc.c  dds.c  dds_float.c  dds_int.c  dtmf.c  ec_disable_detector.c  ec_disable_tone.c  echo.c  fax.c  fax_modems.c  faxfont.h  filter_tools.c  filter_tools.h  float_fudge.h  floating_fudge.h  fsk.c  g711.c  g722.c  g722_decode.c  g722_encode.c  g726.c  gsm0610_decode.c  gsm0610_encode.c  gsm0610_local.h  gsm0610_long_term.c  (+87 more)
src/msvc/: inttypes.h  spandsp.def  spandsp.h  vc8proj.foot  vc8proj.head
src/spandsp/: adsi.h  alaw_ulaw.h  arctan2.h  async.h  at_interpreter.h  awgn.h  bell_r2_mf.h  bert.h  biquad.h  bit_operations.h  bitstream.h  complex.h  complex_dds.h  complex_filters.h  complex_vector_float.h  crc.h  dc_restore.h  dds.h  dtmf.h  ec_disable_detector.h  ec_disable_tone.h  echo.h  expose.h  fast_convert.h  fax.h  fax_modems.h  fir.h  fsk.h  g168models.h  g711.h  g722.h  g726.h  gsm0610.h  hdlc.h  ima_adpcm.h  image_translate.h  logging.h  lpc10.h  mmx.h  modem_connect_tones.h  (+51 more)
src/spandsp/private/: adsi.h  fsk.h  g726.h  image_translate.h  lpc10.h  sig_tone.h  t30.h  t30_dis_dtc_dcs_bits.h  t31.h  t38_gateway.h  t38_non_ecm_buffer.h  t38_terminal.h  t4_rx.h  t4_t6_decode.h  t4_t6_encode.h  t4_tx.h  timezone.h  v17rx.h  v18.h  v22bis.h  v27ter_rx.h  v27ter_tx.h  v29rx.h  v8.h
test-data/: Makefile.am  Makefile.in
test-data/etsi/: Makefile.in
test-data/etsi/fax/: Makefile.in
test-data/itu/: Makefile.in
test-data/itu/fax/: Makefile.am  Makefile.in  generate_dithered_tif.c  generate_sized_pages.c  generate_striped_pages.c
test-data/local/: Makefile.in
tests/: Makefile.am  Makefile.in  adsi_tests.c  alaw_ulaw_tests.c  async_tests.c  at_interpreter_tests.c  awgn_tests.c  bell_mf_rx_tests.c  bell_mf_tests.c  bell_mf_tx_tests.c  bert_tests.c  bit_operations_tests.c  bitstream_tests.c  constel.cpp  constel.h  crc_tests.c  dc_restore_tests.c  dds_tests.c  dtmf_gen_tests.c  dtmf_rx_tests.c  dtmf_tests.c  dtmf_tx_tests.c  ec_disable_detector_tests.c  ec_disable_tone_tests.c  echo_monitor.cpp  echo_monitor.h  echo_tests.c  fax_decode.c  fax_tester.c  fax_tester.h  fax_tests.c  fax_tests.sh  fax_utils.c  fsk_tests.c  g1050.c  g1050.h  g1050_tests.c  g168_tests.c  g711_tests.c  g722_tests.c  (+70 more)
