# configure.in -- Process this file with autoconf to produce configure
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#
# $Id: configure.in,v 1.8 2004/03/28 12:46:42 steveu Exp $

# @start 1

AC_INIT(src/tone_generate.c)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(src/config.h:config-h.in)
AM_INIT_AUTOMAKE(spandsp, 0.0.1)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_GCC_TRADITIONAL
AC_PROG_LIBTOOL

AC_LANG_C

AC_C_CONST
AC_C_INLINE
AC_C_VOLATILE

AC_TYPE_SIGNAL

AC_FUNC_ERROR_AT_LINE
AC_FUNC_VPRINTF
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES

AC_CHECK_FUNCS([memmove])
AC_CHECK_FUNCS([memset])
AC_CHECK_FUNCS([pow])
AC_CHECK_FUNCS([sqrt])
AC_CHECK_FUNCS([rint])
AC_CHECK_FUNCS([select])
AC_CHECK_FUNCS([strcasecmp])
AC_CHECK_FUNCS([strchr])
AC_CHECK_FUNCS([strdup])
AC_CHECK_FUNCS([strerror])
AC_CHECK_FUNCS([strstr])
AC_CHECK_FUNCS([strtol])
AC_CHECK_FUNCS([gettimeofday])

AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_HEADER_TIME

# Check for header files.
AC_CHECK_HEADERS(socket.h)
AC_CHECK_HEADERS(stdint.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(stdlib.h)
AC_CHECK_HEADERS(string.h)
AC_CHECK_HEADERS(strings.h)
AC_CHECK_HEADERS(malloc.h)
AC_CHECK_HEADERS(float.h)
AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(sys/time.h)
AC_CHECK_HEADERS(sys/select.h)
AC_CHECK_HEADERS(sys/ioctl.h)
AC_CHECK_HEADERS(sys/fcntl.h)
AC_CHECK_HEADERS(linux/soundcard.h)
AC_CHECK_HEADERS(audiofile.h)
AC_CHECK_HEADERS(tiffiop.h)
AC_CHECK_HEADERS(pthread.h)

# Checks for libraries.
#AC_CHECK_LIB([tiff], [TIFFOpen],,echo "Can't work without libtiff"; exit 1)
AC_CHECK_LIB([tiff], [TIFFOpen])
AC_CHECK_LIB([xml2], [xmlParseFile])
AC_CHECK_LIB([audiofile], [afOpenFile])
AC_CHECK_LIB([fftw], [fftw_create_plan])
AC_CHECK_LIB([pthread], [pthread_attr_init])
AC_CHECK_LIB([unicall], [uc_Start])
AC_CHECK_LIB([mfcr2], [mfcr2_new])

AC_ARG_ENABLE(doc,     [  --enable-doc      Build the documentation])
AC_ARG_ENABLE(tests,   [  --enable-tests    Build the test programs])
AC_ARG_ENABLE(itutests,[  --enable-itutests Build TIFF test files for some ITU test images])

AM_CONDITIONAL([COND_DOC], [test "$enable_doc" = yes])
AM_CONDITIONAL([COND_TESTS], [test "$enable_tests" = yes])
AM_CONDITIONAL([COND_ITUTESTS], [test "$enable_itutests" = yes])

AC_CONFIG_FILES([Makefile
                 doc/Makefile
                 itutests/Makefile
                 src/Makefile
                 tests/Makefile
                 spandsp.spec])

AC_OUTPUT

# @end 1
